--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nginx-cloudrun",
+  "name": "express-cloudrun",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -8,5 +8,8 @@
     "start": "node app.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.19.2"
+  }
 }
